--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "method-override": "^3.0.0",
     "moment-timezone": "^0.5.21",
     "mongoose": "^5.2.9",
     "passport": "^0.4.0",
