--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.21",
     "mongoose": "^5.2.9",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
