--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.21",
     "mongoose": "^5.2.9",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
